# meridian-support-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  build_and_serve.sh  start_project.sh
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  start_backend.sh
backend/app/: config.py  main.py  meridian_branding.py
backend/app/agents/: react_graph.py  react_state.py
backend/app/api/: deps.py  middleware.py  request_logging.py
backend/app/api/routers/v1/: auth.py  chat.py  users.py
backend/app/core/: openrouter.py  prompts.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  chat.py  user.py
backend/app/db/repositories/: chat_repository.py  user_repository.py
backend/app/schemas/: user.py
backend/app/services/: user_service.py
backend/app/tools/: __init__.py  mcp_registry.py  registry.py
backend/app/utils/: logger.py  validators.py
backend/system_prompts/react/: react_loop.md
backend/tests/: conftest.py  test_auth_cookie.py  test_auth_me.py  test_chat_repository.py  test_health.py  test_mcp_registry.py  test_react_parse.py  test_users_me.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/auth/: LogoutButton.tsx  SignIn.tsx
frontend/components/meridian/: MeridianMark.tsx
frontend/lib/: apiBase.ts  meridian.ts
frontend/lib/api/: client.ts  (+1 more)
scripts/: bootstrap.sh  ci-local.sh  export-static.sh  start-dev.sh
(+3 files in other folders)
